@@ -31,13 +31,17 @@ auth_verbose_passwords = no
 # SSL: Global settings.
 # Refer to wiki site for per protocol, ip, server name SSL settings:
 # http://wiki2.dovecot.org/SSL/DovecotConfiguration
-ssl = PH_ENABLE_SSL
+ssl = required
 verbose_ssl = no
-ssl_cert = PH_SSL_CERT
-ssl_key = PH_SSL_KEY
+ssl_cert = <PH_SSL_CERT
+ssl_key = <PH_SSL_KEY
 
-
-disable_plaintext_auth = no
+# With disable_plaintext_auth=yes, STARTTLS or SSL is mandatory.
+disable_plaintext_auth = yes
+# Allow plain text password per IP address/net
+#remote 192.168.0.0/24 {
+#   disable_plaintext_auth = no
+#}
 
 # Mail location and mailbox format.
 mail_location = maildir:/%Lh/Maildir/:INDEX=/%Lh/Maildir/
